--- a/projects/index.html
+++ b/projects/index.html
@@ -2,87 +2,57 @@
 <html>
 <head>
 
-  <link rel="stylesheet" type="text/css" href="../css/header.css"/>
-  <link rel="stylesheet" type="text/css" href="../css/page.css"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="../css/main.css"/>
+<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css"/>
 
 </head>
-
 <body>
 
-  <div id="header">
-
-    <div id="logo">
-      <a href="..">
-      <img id="title" src="../img/title.PNG" alt="Designing Circuits">
-      </a>
-    </div>
-
-    <div id="nav">
-      <ul id="menu">
-        <li><a href="..">Home</a></li>
-        <li><a href="../circuits">Circuits</a></li>
-        <li><a href="../projects">Projects</a></li>
-        <li><a href="../resources">Resources</a></li>
-        <li><a href="../about">About</a></li>
-        <li><a href="../terms">Terms</a></li>
-      </ul>
-    </div>
-
-    <div id="search">
-      <div id="tfheader">
-        <form id="tfnewsearch" method="get" action="http://www.google.com">
-                <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
-        </form>
-      <div class="tfclear"></div>
-      </div>
-    </div>
-
-  </div>
-
   <div id="wrap">
-    <div id="page">
-        <div id="content">
-          <h1>Header</h1>
-        <p>projects page</p>
+    <div id="header">
+        <input type="checkbox" id="menuToggle">
 
-           <div class="row">
-             <div class="square">
-               1x1
-  <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
-             </div>
-             <div class="square">
-               2x1
-               <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
-               </div>
-             <div class="square">3x1
-               <img class="testpic" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg" alt="">
+        <div id="top">
+          <div id="logo">
+            <a href="../"><img id="title" src="../img/title.PNG" alt="Designing Circuits"></a>
+          </div>
 
-             </div>
-           </div>
-           <div class="row">
-             <div class="square">2x1</div>
-             <div class="square">2x2</div>
-             <div class="square">2x3</div>
-           </div>
-           <div class="row">
-             <div class="square">3x1</div>
-             <div class="square">3x2</div>
-             <div class="square">3x3</div>
-           </div>
+          <div id="menubox">
+            <label for="menuToggle" class="menu-icon">
+              <i class="fa fa-bars" aria-hidden="true"></i>
+            </label>
+          </div>
+        </div>
 
+        <div class="nav">
+          <ul id="menu">
+            <li><a href="../"><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
+            <li><a href="../circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
+            <li><a class="active" href="../projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
+            <li><a href="../resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
+            <li><a href="../terms"><i class="fa fa-gavel fa-fw n" aria-hidden="true"></i> Terms</a></li>
+            <li><a href="../about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
+          </ul>
         </div>
     </div>
+
+    <div id="page">
+      <h1>Projects</h1>
+    </div>
+    <div id="push"></div>
   </div>
 
   <div id="footer">
-    <div class="footernav">
-    DesigningCircuits © 2016. All Rights Reserved. &nbsp; &nbsp; &nbsp; &nbsp;
-    <a class="footlink" href="..">Home</a>
-     | <a class="footlink" href="../circuits">Circuits</a>
-     | <a class="footlink" href="../projects">Projects</a>
-     | <a class="footlink" href="../resources">Resources</a>
-     | <a class="footlink" href="../about">About</a>
-     | <a class="footlink" href="../terms">Terms</a>
+    <div>Copyright © 2017 DesigningCircuits. All Rights Reserved.</div>
+    <div>
+      <a href="../">Home</a> |
+      <a href="../circuits">Circuits</a> |
+      <a href="../projects">Projects</a> |
+      <a href="../resources">Resources</a> |
+      <a href="../terms">Terms</a> |
+      <a href="../about">About</a>
     </div>
   </div>
 
