--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@ permalink: /404.html
 
         <div class="nav">
           <ul id="menu">
-            <li><a class="active" href="/css/.."><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
+            <li><a href="/css/.."><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
             <li><a href="/circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
             <li><a href="/projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
             <li><a href="/resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
