--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,40 @@
 
     <div id="page">
       <h1>About</h1>
+
+      <p>
+        Designing Circuits is a project dedicated to
+        teaching the application of analog and digital circuits.
+      </p>
+      <img id="me" src="../img/meirl.jpg">
+      <p>
+        My name is Sergio Silva, and I attend the University of Illinois
+        at Urbana-Champaign, Class of 2018, where I study Electrical
+        Engineering. My passion lies in circuit design, mainly analog.
+        I have taken courses in analog/digital IC design, power electronics,
+        RF circuit design, and control systems. Here is a copy of my
+        <a href="www.google.com">resume.</a>
+      </p>
+      <p>
+        With this website, I hope to improve my circuit design skills as
+        well as help others who wish to learn more about circuits. I post
+        articles and projects on my sparetime, but it becomes harder to do
+        so during the school semester. Each of the included projects on the
+        site are my own works, and they make for good projects that teach
+        you about that circuit. The articles are meant to give you the
+        background knowledge in order to understand the projects, but once
+        you know enough, you can also make your own project!
+      </p>
+
+      <br/>
+      <p>
+        If you have any further questions or have feedback on how improve
+        the site, please contact <a>designingcircuits@gmail.com</a>
+      </p>
+      <p>
+        I would very be glad to read and to respond to all comments.
+        Thank you for your interest.
+      </p>
     </div>
     <div id="push"></div>
   </div>
