--- a/about/index.html
+++ b/about/index.html
@@ -42,6 +42,18 @@
       <h1>About</h1>
 
       <p>
+        Talk to that person about why they should bother reading your site.
+
+        Talk about the problems you solve.
+
+        Talk about how you can help.
+
+        Talk about what they’re interested in.
+
+        To quote Brian Clark,
+
+        What do you need to know? You need to know whom they admire, and what they aspire to, despise, fear, and cherish.
+
         Designing Circuits is a project dedicated to
         teaching the application of analog and digital circuits.
       </p>
