--- a/about/index.html
+++ b/about/index.html
@@ -42,6 +42,12 @@
       <h1>About</h1>
 
       <p>
+        DesigningCircuits is a project dedicated to teaching how to design
+        analog and digital circuits.
+
+        If you're like me, then your goal is to become a circuit designer. What
+        better way than to design circuits? 
+
         Talk to that person about why they should bother reading your site.
 
         Talk about the problems you solve.
