--- a/circuits/index.html
+++ b/circuits/index.html
@@ -40,14 +40,14 @@
 
     <div id="page">
       <h1>Circuits</h1>
-      <ul id="menucircuits">
+      <ul>
         <li><a href="buck">Buck Converter</a></li>
         <li><a href="boost">Boost Converter</a></li>
         <li><a href="buckboost">Buck-Boost Converter</a></li>
         <li><a href="opamp">Basic OpAmp</a></li>
         <li><a href="filters">Passive and Active Filters</a></li>
-        <li><a href="realcapacitor">Real Capacitors</a></li>
-        <li><a href="realinductor">Real Inductors</a></li>
+        <li><a href="capacitor">Real Capacitors</a></li>
+        <li><a href="inductor">Real Inductors</a></li>
         <li><a href="mosfet">Basic MOSFET</a></li>
         <li><a href="bjt">Basic Bipolar Junction Transistor</a></li>
         <li><a href="smallsignal">Small Signal Model</a></li>
