--- a/resources/index.html
+++ b/resources/index.html
@@ -40,6 +40,13 @@
 
     <div id="page">
       <h1>Resources</h1>
+      <ul>
+        <li><a href="#">LTspice</a></li>
+        <li><a href="#">Cadence</a></li>
+        <li><a href="#">Common Components</a></li>
+        <li><a href="#">Oscilloscopes</a></li>
+        <li><a href="#">Power Converter Topologies</a></li>
+      </ul>
     </div>
     <div id="push"></div>
   </div>
