--- a/projects/index.html
+++ b/projects/index.html
@@ -40,6 +40,68 @@
 
     <div id="page">
       <h1>Projects</h1>
+
+      <div class="gallery">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="../img/meirl.jpg" alt="">
+          </a>
+          <div class="caption">
+            Add description here
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="../img/meirl.jpg" alt="">
+          </a>
+          <div class="caption">
+            Add description here
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="../img/meirl.jpg" alt="">
+          </a>
+          <div class="caption">
+            Add description here
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="../img/meirl.jpg" alt="">
+          </a>
+          <div class="caption">
+            Add description here
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <div class="thumbnail">
+          <a href="#">
+            <img src="../img/meirl.jpg" alt="">
+          </a>
+          <div class="caption">
+            Add description here
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+            <div class="clearfix"></div>
+
+            <div style="padding:6px;">
+              <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
+              <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
+            </div>
     </div>
     <div id="push"></div>
   </div>
