--- a/projects/index.html
+++ b/projects/index.html
@@ -40,68 +40,105 @@
 
     <div id="page">
       <h1>Projects</h1>
+      <div id="box">
 
-      <div class="gallery">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="../img/meirl.jpg" alt="">
-          </a>
-          <div class="caption">
-            Add description here
-          </div>
-        </div>
-      </div>
-      <div class="gallery">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="../img/meirl.jpg" alt="">
-          </a>
-          <div class="caption">
-            Add description here
-          </div>
-        </div>
-      </div>
-      <div class="gallery">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="../img/meirl.jpg" alt="">
-          </a>
-          <div class="caption">
-            Add description here
-          </div>
-        </div>
-      </div>
-      <div class="gallery">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="../img/meirl.jpg" alt="">
-          </a>
-          <div class="caption">
-            Add description here
-          </div>
-        </div>
-      </div>
-      <div class="gallery">
-        <div class="thumbnail">
-          <a href="#">
-            <img src="../img/meirl.jpg" alt="">
-          </a>
-          <div class="caption">
-            Add description here
-          </div>
-        </div>
-      </div>
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg01.jpg">
+        <figure>
+          <img src="../img/title.PNG" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg02.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg03.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg04.jpg" alt="">
+          <figcaption>
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg05.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg06.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg07.jpg" alt="">
+           <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg08.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg09.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+      <a href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg">
+        <figure>
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/123941/placeimg10.jpg" alt="">
+          <figcaption>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </figcaption>
+        </figure>
+      </a>
+
+  </div>
 
 
 
 
 
-            <div class="clearfix"></div>
 
-            <div style="padding:6px;">
-              <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
-              <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
-            </div>
     </div>
     <div id="push"></div>
   </div>
