--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@ permalink: /404.html
     <div id="page">
       <h1>Oops,</h1>
       <h2>Looks like there was a short circuit!</h2>
-      <img id="pic404" src="/img/404.png">
+      <img id="pic404" src="/img/404.png" alt="404">
     </div>
     <div id="push"></div>
   </div>
