--- a/circuits/index.html
+++ b/circuits/index.html
@@ -11,50 +11,46 @@
 <body>
 
   <div id="wrap">
-    <div id="header">
-        <input type="checkbox" id="menuToggle">
-
-        <div id="top">
-          <div id="logo">
-            <a href="../"><img id="title" src="../img/title.PNG" alt="Designing Circuits"></a>
+    <div id="border">
+      <div id="header">
+          <input type="checkbox" id="menuToggle">
+          <div id="top">
+            <div id="logo">
+              <a href="../"><img id="title" src="../img/title.PNG" alt="Designing Circuits"></a>
+            </div>
+            <div id="menubox">
+              <label for="menuToggle" class="menu-icon">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </label>
+            </div>
           </div>
-
-          <div id="menubox">
-            <label for="menuToggle" class="menu-icon">
-              <i class="fa fa-bars" aria-hidden="true"></i>
-            </label>
+          <div class="nav">
+            <ul id="menu">
+              <li><a href="../"><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
+              <li><a class="active" href="../circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
+              <li><a href="../projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
+              <li><a href="../resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
+              <li><a href="../about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
+            </ul>
           </div>
-        </div>
-
-        <div class="nav">
-          <ul id="menu">
-            <li><a href="../"><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
-            <li><a class="active" href="../circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
-            <li><a href="../projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
-            <li><a href="../resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
-            <li><a href="../terms"><i class="fa fa-gavel fa-fw n" aria-hidden="true"></i> Terms</a></li>
-            <li><a href="../about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
-          </ul>
-        </div>
+      </div>
     </div>
 
     <div id="page">
       <h1>Circuits</h1>
-      
+
     </div>
     <div id="push"></div>
   </div>
 
   <div id="footer">
     <div>Copyright © 2017 DesigningCircuits. All Rights Reserved.</div>
-    <div>
-      <a href="../">Home</a> |
-      <a href="../circuits">Circuits</a> |
-      <a href="../projects">Projects</a> |
-      <a href="../resources">Resources</a> |
-      <a href="../terms">Terms</a> |
-      <a href="../about">About</a>
-    </div>
+    <a href="../">Home</a> |
+    <a href="../circuits">Circuits</a> |
+    <a href="../projects">Projects</a> |
+    <a href="../resources">Resources</a> |
+    <a href="../about">About</a> &mdash;
+    <a href="../terms">Terms</a>
   </div>
 
 </body>
