--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@ permalink: /404.html
               <li><a href="/circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
               <li><a href="/projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
               <li><a href="/resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
-              <li><a class="active" href="/about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
+              <li><a href="/about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
             </ul>
           </div>
       </div>
