--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,55 @@
 
     <div id="page">
       <h1>About</h1>
-
+      <p>
+        DesigningCircuits is a project dedicated to teaching you about the
+        applications of analog and digital circuits.
+      </p>
+      <p>
+        This is something I would have liked to have when I first started learning about electronics.
+        When you first learn about electronic circuits, it just seems like a bunch of math,
+        which bores a lot of people (me included). However, if you can see beyond
+        that, you'll find that there is much more to circuits than just solving KVL
+        and KCL. It is the application part that intrigues people. How cool is it that
+        you can build your own bench power supply or make a speaker amplifier for your phone?
+      </p>
+      <p>
+        If you want to build your own electronics, then you have to start somewhere,
+        and I am here to help you. On this site, I post circuit articles and projects
+        on how to design circuits. The articles are meant to give you the
+        background knowledge in order to understand the projects, but once
+        you know enough, you can also make your own project!
+      </p>
+      <p>
+        What I do differently from other circuit websites is that I try to provide
+        enough clarification on the projects. On other sites, more often than
+        not, I see projects that just consist of displaying a schematic
+        with a description and a component list, but there isn't much to learn from that.
+        I believe the best way to learn is for someone to explain how each part of the circuit
+        works as well as important design aspects, such as "Why is there a capacitor here?
+        What's it's purpose?"
+      </p>
+      <img id="me" src="../img/sergio_silva.png">
+      <p>
+        My name is Sergio Silva, and my dream is to become an analog circuit designer.
+        By making this site, I hope to help others who want to know more about circuits
+        and to improve my circuit design skills. I'm an electrical
+        engineering major at the University of Illinois
+        at Urbana-Champaign, class of 2018. My coursework revolves around circuits,
+        if you haven't guess already. I have taken courses in analog/digital IC design,
+        power electronics, RF circuits, analog/digital signal processing, control systems,
+        and FPGA programming.
+        Here you can find my <a href="sergio_silva_resume.pdf">resume</a>.
+      </p>
+      </br>
+      <p>
+        If you have any further questions or have feedback on how improve
+        the site, please contact designingcircuits@gmail.com
+      </p>
+      <p>
+        I would be very glad to read and to respond to all comments.
+        Thank you for your interest.
+      </p>
     </div>
     <div id="push"></div>
   </div>
