--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
         applications of analog and digital circuits.
       </p>
       <p>
-        This is something I would have liked to have when I first started learning about electronics.
+        This is something I would have liked to have had when I first started learning about electronics.
         When you first learn about electronic circuits, it just seems like a bunch of math,
         which bores a lot of people (me included). However, if you can see beyond
         that, you'll find that there is much more to circuits than just solving KVL
@@ -64,7 +64,7 @@
         with a description and a component list, but there isn't much to learn from that.
         I believe the best way to learn is for someone to explain how each part of the circuit
         works as well as important design aspects, such as "Why is there a capacitor here?
-        What's it's purpose?"
+        What's its purpose?"
       </p>
       <img id="me" src="../img/sergio_silva.png">
       <p>
