--- a/resources/index.html
+++ b/resources/index.html
@@ -39,6 +39,53 @@
     <div id="page">
       <h1>Resources</h1>
 
+      <div id="Container">
+        <div>
+          <h2>Buy Parts</h2>
+          <ul>
+            <li><a href="https://www.digikey.com/">DigiKey</a></li>
+            <li><a href="http://www.mouser.com/">Mouser Electronics</a></li>
+            <li><a href="https://www.radioshack.com/">Radioshack</a></li>
+            <li><a href="https://www.sparkfun.com/">SparkFun Electronics</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Order PCBs</h2>
+          <ul>
+            <li><a href="http://pcbshopper.com/">PCBShopper</a></li>
+            <li><a href="https://www.oshpark.com/">OSH Park</a></li>
+            <li><a href="http://www.4pcb.com/">Advanced Circuits</a></li>
+            <li><a href="https://www.pcb-pool.com/">PCB-POOL</a></li>
+            <li><a href="https://www.seeedstudio.com/fusion_pcb.html">Seeed Studio</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Software</h2>
+          <ul>
+            <li><a href="http://www.linear.com/designtools/software/">LTSpice</a></li>
+            <li><a href="http://www.autodesk.com/products/eagle/overview">Eagle</a></li>
+            <li><a href="http://kicad-pcb.org/">KiCad</a></li>
+            <li><a href="https://easyeda.com/">EasyEDA</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Readings</h2>
+          <ul>
+            <li><a href="https://www.amazon.com/Art-Electronics-Paul-Horowitz/dp/0521809266">The Art of Electronics, 3rd ed</a></li>
+            <li><a href="https://www.linear.com/designtools/app_notes.php">Linear Technology App Notes</a></li>
+            <li><a href="http://www.analog.com/en/analog-dialogue/archives.html">Analog Dialogue</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Equipment</h2>
+          <ul>
+            <li><a href="https://www.amazon.com/Rigol-DS1054Z-Digital-Oscilloscope-Channels/dp/B012938E76">Rigol DS1054Z Digital Oscilloscope 50 MHz</a></li>
+            <li><a href="https://www.amazon.com/Tekpower-TP3005T-Variable-Linear-Supply/dp/B00ZBCLJSY/ref=sr_1_3?s=industrial&ie=UTF8&qid=1484794259&sr=1-3">Tekpower TP3005T Variable Linear DC Power Supply 30V 5A</a></li>
+            <li><a href="https://www.amazon.com/dp/B0136YQD02/ref=cm_sw_su_dp?tag=top10786-20">Mastech MS8264 30-Range Digital Multimeter</a></li>
+          </ul>
+        </div>
+      </div>
+
     </div>
     <div id="push"></div>
   </div>
