--- a/about/index.html
+++ b/about/index.html
@@ -76,7 +76,7 @@
         if you haven't guess already. I have taken courses in analog/digital IC design,
         power electronics, RF circuits, analog/digital signal processing, control systems,
         and FPGA programming.
-        Here you can find my <a href="sergio_silva_resume.pdf">resume</a>.
+        Here you can find my <a href="resume_sergio_silva.pdf">resume</a>.
       </p>
       </br>
       <p>
