--- a/circuits/index.html
+++ b/circuits/index.html
@@ -26,11 +26,11 @@
           </div>
           <div class="nav">
             <ul id="menu">
-              <li><a href="../"><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
-              <li><a class="active" href="../circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
-              <li><a href="../projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
-              <li><a href="../resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
-              <li><a href="../about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
+              <li><a href="../"><i class="fa fa-home fa-fw n" aria-hidden="true"></i>Home</a></li>
+              <li><a class="active" href="../circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i>Circuits</a></li>
+              <li><a href="../projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i>Projects</a></li>
+              <li><a href="../resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i>Resources</a></li>
+              <li><a href="../about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i>About</a></li>
             </ul>
           </div>
       </div>
@@ -38,7 +38,7 @@
 
     <div id="page">
       <h1>Circuits</h1>
-
+        <li><a href="../">Current Mirrors</a></li>
     </div>
     <div id="push"></div>
   </div>
