--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div id="page">
       <h1>Welcome</h1>
       <p>
-        If you're fascinated about electronics and want to learn more, then this
+        If you want to learn more about circuit design then this
         is the place for you! This site is meant to teach you how to design circuits.
-        As long as you know the basics of circuit theory, you should easily be
-        able to learn from and follow the posts and projects.
+        I will focus mainly on analog circuits, IC and board level, since I find
+        analog design fascinating.
       </p>
 
       <div id="container">
@@ -67,6 +67,10 @@
             allowing you to make the project on your own. Each design aspect and choice
             is thoroughly explained, so you can understand the design process. Each
             project is a great way to get your hands dirty and start building electronics.
+
+            Explore multiple projects that incorpoarte important circuit concepts.
+            Projects are either at the IC level or board level. Each project has
+            a thorough step-by-step process
           </p>
         </div>
 
