--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 
     <div id="page">
       <h1>About</h1>
-      hello
+      hellox
       <!--
       <p>
         DesigningCircuits is a project dedicated to teaching you about the
