--- a/circuits/index.html
+++ b/circuits/index.html
@@ -39,6 +39,7 @@
     <div id="page">
       <h1>Circuits</h1>
         <li><a href="../">Current Mirrors</a></li>
+        <li><a href="buckconverter">Buck Converter</a></li>
     </div>
     <div id="push"></div>
   </div>
