--- a/404.html
+++ b/404.html
@@ -1,62 +1,13 @@
 ---
+layout: default
+title: 404 - Page not found
 permalink: /404.html
 ---
 
-<!DOCTYPE html>
-<html>
-<head>
+<div class="text-center">
+  <h1>Whoops, this page doesn't exist.</h1>
+  <h1>Move along. (404 error)</h1>
+  <br/>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="/css/main.css"/>
-<link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css"/>
-
-</head>
-<body>
-
-  <div id="wrap">
-    <div id="border">
-      <div id="header">
-          <input type="checkbox" id="menuToggle">
-          <div id="top">
-            <div id="logo">
-              <a href="./"><img id="title" src="/img/title.PNG" alt="Designing Circuits"></a>
-            </div>
-            <div id="menubox">
-              <label for="menuToggle" class="menu-icon">
-                <i class="fa fa-bars" aria-hidden="true"></i>
-              </label>
-            </div>
-          </div>
-          <div class="nav">
-            <ul id="menu">
-              <li><a href="./"><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
-              <li><a href="/circuits"><i class="fa fa-microchip fa-fw n" aria-hidden="true"></i> Circuits</a></li>
-              <li><a href="/projects"><i class="fa fa-plug fa-fw n" aria-hidden="true"></i> Projects</a></li>
-              <li><a href="/resources"><i class="fa fa-book fa-fw n" aria-hidden="true"></i> Resources</a></li>
-              <li><a href="/about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
-            </ul>
-          </div>
-      </div>
-    </div>
-
-    <div id="page">
-      <h1>Oops,</h1>
-      <h2>Looks like there was a short circuit!</h2>
-      <img id="pic404" src="/img/404.png" alt="404">
-    </div>
-    <div id="push"></div>
-  </div>
-
-  <div id="footer">
-    <div>Copyright © 2017 DesigningCircuits. All Rights Reserved.</div>
-    <a href="./">Home</a> |
-    <a href="/circuits">Circuits</a> |
-    <a href="/projects">Projects</a> |
-    <a href="/resources">Resources</a> |
-    <a href="/about">About</a> &mdash;
-    <a href="/terms">Terms</a>
-  </div>
-
-</body>
-</html>
+  <img src="{{ site.baseurl }}/img/404-southpark.jpg" />
+</div>
